[package]
name = "election"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
etcd-client = "0.10.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
thiserror = "1.0.37"
serde = { version = "1.0.148", features = ["derive"] }
bincode = "1.3.3"